Complete redesign of 8급

--- a/_posts/8급/03/8000-03-02-六.md
+++ b/_posts/8급/03/8000-03-02-六.md
@@ -6,10 +6,21 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 여섯 륙(육)
+Korean name: 여섯 륙(육) <br><br>
 
-Meaning: six, sixth
+Meaning: six, sixth <br><br>
 
 Examples:
-* 육각형 (六角形) hexagon <br><br>
-* 육감 (六感) sixth sense; that is, the feeling or intuition one experiences that cannot be explained through the five senses <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* (none) <br><br>
+
+(No stars)
+* 육각형 (六角形) <br><br>
+* 육감 (六感) <br><br>
