--- a/_posts/8급/03/8000-03-03-萬.md
+++ b/_posts/8급/03/8000-03-03-萬.md
@@ -6,19 +6,18 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 일만 만
+Korean name: 일만 만 <br><br>
 
-Meaning: ten thousand, greatly, very much
+Meaning: ten thousand, greatly, very much <br><br>
 
 Examples:
-* 만국 (萬國) every nation <br><br>
-* 만년 (萬年) forever, being permanent <br><br>
-* 만년필 (萬年筆) fountain pen <br><br>
-* 만능 (萬能) well-rounded, being skilled at everything <br><br>
-* 만물 (萬物) everything in the world, all things <br><br>
-* 만반 (萬般) being fully prepared <br><br>
-* 만사 (萬事) everything, all kinds of things <br><br>
-* 만수 (萬壽) long life <br><br>
-* 만유 (萬有) everything in the universe <br><br>
-* 만인 (萬人) all people <br><br>
-* 만전 (萬全) state of perfection, flawlessness <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* 만사 (萬事) <br><br>
+
