--- a/_posts/8급/03/8000-03-05-木.md
+++ b/_posts/8급/03/8000-03-05-木.md
@@ -6,13 +6,24 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 나무 목
+Korean name: 나무 목 <br><br>
 
-Meaning: wood, lumber
+Meaning: wood, lumber <br><br>
 
 Examples:
-* 목공 (木工) carpentry <br><br>
-* 목기 (木器) wooden bowl <br><br>
-* 목성 (木星) Jupiter <br><br>
-* 목수 (木手) carpenter <br><br>
-* 목화 (木花) cotton <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* (none) <br><br>
+
+(No stars)
+* 목공 (木工) <br><br>
+* 목기 (木器) <br><br>
+* 목성 (木星) <br><br>
+* 목수 (木手) <br><br>
+* 목화 (木花) <br><br>
