--- a/_posts/8급/04/8000-04-01-門.md
+++ b/_posts/8급/04/8000-04-01-門.md
@@ -6,20 +6,25 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 문 문
+Korean name: 문 문 <br><br>
 
-Meaning: door, inside a house, lineage, pedigree
+Meaning: door, inside a house, lineage, pedigree <br><br>
 
 Examples:
-* 가문 (家門) family clan <br><br>
-* 교문 (校門) school door<br><br>
-* 명문 (名門) 1. a reputable family; 2. a prestigious school <br><br>
-* 문벌 (門閥) lineage, pedigree <br><br>
-* 방문 (房門) room door <br><br>
-* 부문 (部門) division, field <br><br>
-* 전문 (專門) specialty, expertise <br><br>
-* 정문 (正門) main gate <br><br>
-* 창문 (窓門) window <br><br>
-* 출입문 (出入門) door, gate for entering and exiting a place <br><br>
-* 항문 (肛門) anus <br><br>
-* 후문 (後門) back door <br><br>
+
+⭐⭐⭐
+* 방문 (房門) <br><br>
+* 정문 (正門) <br><br>
+* 창문 (窓門) <br><br>
+
+⭐⭐
+* 부문 (部門) <br><br>
+* 전문 (專門) <br><br>
+
+⭐
+* 가문 (家門) <br><br>
+* 명문 (名門) <br><br>
+* 항문 (肛門) <br><br>
+
+(No stars)
+* 후문 (後門) <br><br>
