--- a/_posts/8급/04/8000-04-02-民.md
+++ b/_posts/8급/04/8000-04-02-民.md
@@ -6,23 +6,26 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 백성 민
+Korean name: 백성 민 <br><br>
 
-Meaning: people of a nation, people
+Meaning: people of a nation, people <br><br>
 
 Examples:
-* 국민 (國民) people of a nation, citizen <br><br>
-* 교민 (僑民) citizen who lives abroad <br><br>
-* 난민 (難民) refugee <br><br>
-* 민법 (民法) civil law, civil code <br><br>
-* 민속 (民俗) customs and culture of ordinary people <br><br>
-* 민심 (民心) thoughts and feelings of an ordinary citizen <br><br>
-* 민원 (民願) civil complaint in which a resident asks the government for administrative action <br><br>
-* 민의 (民意) the will of the people<br><br>
-* 민족 (民族) ethnic group, people who have lived in a region for a long time and have their own customs <br><br>
-* 민주주의 (民主主義) democracy <br><br>
-* 서민 (庶民) ordinary person, working-class person <br><br>
-* 시민 (市民) 1. city dweller; 2. citizen <br><br>
-* 식민 (植民) colonization <br><br>
-* 주민 (主民) resident <br><br>
-* 평민 (平民) ordinary person, someone who does not hold government office <br><br>
+
+⭐⭐⭐
+* 시민 (市民) <br><br>
+
+⭐⭐
+* 국민 (國民) <br><br>
+* 민족 (民族) <br><br>
+* 민주주의 (民主主義) <br><br>
+* 주민 (主民) <br><br>
+
+⭐
+* 민속 (民俗) <br><br>
+* 서민 (庶民) <br><br>
+* 식민 (植民) <br><br>
+
+(No stars)
+* 난민 (難民) <br><br>
+* 민원 (民願) <br><br>
