--- a/_posts/8급/04/8000-04-03-白.md
+++ b/_posts/8급/04/8000-04-03-白.md
@@ -6,20 +6,26 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 흰 백
+Korean name: 흰 백 <br><br>
 
-Meaning: white, clean, clear or certain understanding
+Meaning: white, clean, clear or certain understanding <br><br>
 
 Examples:
-* 결백 (潔白) innocence of wrongdoing <br><br>
-* 고백 (告白) confession; revealing one's secrets <br><br>
-* 단백질 (蛋白質) protein <br><br>
-* 담백하다 (淡白하다) 1. candid, ungreedy, pure (personality); 2. light, clean, plain (food) <br><br>
-* 명백하다 (明白하다) clear and obvious <br><br>
-* 백기 (白旗) white flag <br><br>
-* 백미 (白米) white rice <br><br>
-* 백발 (白髮) white/gray/silver hair <br><br>
-* 백수 (白手) 1. empty hands; 2. joblessness <br><br>
-* 백악관 (白堊館) the US White House <br><br>
-* 백조 (白鳥) white swan <br><br>
-* 자백 (自白) confession of wrongdoing <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* 고백 (告白) <br><br>
+* 담백하다 (淡白하다) <br><br>
+
+⭐
+* 단백질 (蛋白質) <br><br>
+* 명백하다 (明白하다) <br><br>
+* 백수 (白手) <br><br>
+* 자백 (自白) <br><br>
+
+(No stars)
+* 결백 (潔白) <br><br>
+* 백미 (白米) <br><br>
+* 백악관 (白堊館) <br><br>
