--- a/_posts/8급/04/8000-04-04-父.md
+++ b/_posts/8급/04/8000-04-04-父.md
@@ -6,18 +6,22 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 아버지 부
+Korean name: 아버지 부 <br><br>
 
-Meaning: father, elder
+Meaning: father, elder <br><br>
 
 Examples:
-* 가부장 (家父長) patriarch <br><br>
-* 가부장 제도 (家父長 制度) patriarchy <br><br>
-* 계부 (繼父) stepfather <br><br>
-* 대부 (代父) godfather <br><br>
-* 부녀 (父女) father and daughter <br><br>
-* 부모 (父母) parents <br><br>
-* 부자 (父子) father and son <br><br>
-* 사부 (師父) (honorific) teacher, mentor <br><br>
-* 신부 (神父) Catholic priest <br><br>
-* 어부 (漁父) fisherman <br><br>
+
+⭐⭐⭐
+* 부모님 (父母님) <br><br>
+
+⭐⭐
+* 부자 (父子) <br><br>
+* 신부 (神父) <br><br>
+
+⭐
+* 가부장적 (家父長的) <br><br>
+* 어부지리 (漁夫之利) <br><br>
+
+(No stars)
+* 사부 (師父) <br><br>
