--- a/_posts/8급/04/8000-04-05-北.md
+++ b/_posts/8급/04/8000-04-05-北.md
@@ -6,19 +6,25 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 북녘 북, 달아날 배
+Korean name: 북녘 북, 달아날 배 <br><br>
 
-Meaning: north (북), northward (북), to escape (배)
+Meaning: north (북), northward (북), to escape (배) <br><br>
 
 Examples:
-* 남북(南北) 1. north and south; 2. North and South Korea <br><br>
-* 납북 (拉北) being abducted and taken to North Korea <br><br>
-* 대북 (對北) relating to North Korea <br><br>
-* 대북방송 (對北放送) North Korean broadcast <br><br>
-* 북극 (北極) North Pole <br><br>
-* 북극성 (北極星) Polaris, the North Star <br><br>
-* 북방 (北方) northern direction <br><br>
-* 북부 (北部) northern part of a region <br><br>
-* 북한 (北韓) North Korea <br><br>
-* 탈북 (脫北) defection from North Korea <br><br>
-* 패배 (敗北) loss in a fight or war, etc. <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* 남북(南北) <br><br>
+* 북부 (北部) <br><br>
+
+
+⭐
+* 대북 (對北) <br><br>
+* 북극 (北極) <br><br>
+* 북한 (北韓) <br><br>
+* 패배 (敗北) <br><br>
+
+(No stars)
+* 탈북자 (脫北者) <br><br>
