--- a/_posts/8급/05/8000-05-03-三.md
+++ b/_posts/8급/05/8000-05-03-三.md
@@ -6,13 +6,19 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 석 삼
+Korean name: 석 삼 <br><br>
 
-Meaning: three, third
+Meaning: three, third <br><br>
 
 Examples:
-* 삼각 (三角) triangle <br><br>
-* 삼국 (三國) the three kingdoms of Goguryeo, Baekje, and Silla <br><br>
-* 삼국지 (三國志) Romance of the Three Kingdoms (one of the four great classical novels of Chinese literature) <br><br>
-* 삼원색 (三原色) the three primary colors <br><br>
+
+⭐⭐⭐
 * 삼촌 (三寸) uncle <br><br>
+
+
+⭐⭐
+* 외삼촌 (外三寸) <br><br>
+
+
+⭐
+* 삼각형 (三角形) <br><br>
