--- a/_posts/8급/05/8000-05-04-生.md
+++ b/_posts/8급/05/8000-05-04-生.md
@@ -6,22 +6,33 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 날 생
+Korean name: 날 생 <br><br>
 
-Meaning: to be born, grow, live
+Meaning: to be born, grow, live <br><br>
 
 Examples:
-* 기생충 (寄生蟲) parasite <br><br>
-* 발생 (發生) occurrence of an event; development or genesis of something <br><br>
-* 선생 (先生) 1. teacher; 2. (polite form) a professional, sir, ma'am <br><br>
-* 수험생 (受驗生) a student who takes an examination <br><br>
-* 생물 (生物) 1. organism, living thing; 2. the field of biology <br><br>
-  미생물 (微生物) microorganism <br><br>
-* 생일 (生日) birthday <br><br>
-* 생존 (生存) survival, staying alive <br><br>
-* 생태 (生態) ecology <br><br>
-* 생활 (生活) 1. day-to-day living; 2. livelihood<br><br>
-* 위생 (衛生) hygiene, sanitation <br><br>
-* 인생 (人生) the life of a human <br><br>
-* 탄생 (誕生) 1. a person's birth; 2. the establishment of an institution, organization, etc. <br><br>
-* 학생 (學生) student <br><br>
+
+⭐⭐⭐
+* 선생님 (先生님) <br><br>
+* 생일 (生日) <br><br>
+* 생활 (生活) <br><br>
+* 학생 (學生) <br><br>
+
+⭐⭐
+* 발생 (發生) <br><br>
+* 생존 (生存) <br><br>
+* 인생 (人生) <br><br>
+* 탄생 (誕生) <br><br>
+
+⭐
+* 미생물 (微生物) <br><br>
+* 수험생 (受驗生) <br><br>
+* 생물 (生物) <br><br>
+* 생태 (生態) <br><br>
+* 위생 (衛生) <br><br>
+
+(No stars)
+* 기생충 (寄生蟲) <br><br>
+
+
+
