--- a/_posts/8급/05/8000-05-05-西.md
+++ b/_posts/8급/05/8000-05-05-西.md
@@ -6,15 +6,20 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 서녘 서
+Korean name: 서녘 서 <br><br>
 
-Meaning: four, fourth, the Occident
+Meaning: four, fourth, the Occident <br><br>
 
 Examples:
-* 동서고금 (東西古今) east and west, past and present; i.e., all the places and ages that humans have lived in <br><br>
-* 대서양 (大西洋) Atlantic Ocean <br><br>
-* 서기 (西紀) A.D. (period of history beginning with the birth of Jesus Christ <br><br>
-* 서방 (西方) 1. the West; 2. western countries<br><br>
-* 서부 (西部) the western part of a region <br><br>
+
+⭐⭐⭐
 * 서양 (西洋) the Occident, western countries <br><br>
 
+⭐⭐
+* 서부 (西部) the western part of a region <br><br>
+
+⭐
+* (none) <br><br>
+
+(No stars)
+* 대서양 (大西洋) Atlantic Ocean <br><br>
