--- a/_posts/8급/06/8000-06-01-先.md
+++ b/_posts/8급/06/8000-06-01-先.md
@@ -6,22 +6,22 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 먼저 선
+Korean name: 먼저 선 <br><br>
 
-Meaning: before, in advance, ahead (in time)
+Meaning: before, in advance, ahead (in time) <br><br>
 
 Examples:
-* 선각자 (先覺者) a pioneer, someone who understands the ways of the world before others do <br><br>
-* 선구자 (先驅者) a trailblazer, someone who acts before others in a socially important matter or idea <br><br>
-* 선도 (先導) act of guiding and taking the lead<br><br>
-* 선사 (先史) pre-history, the history preceding the written record <br><br>
-* 선생 (先生) teacher <br><br>
-* 선봉 (先鋒) 1. the military unit that operates on the front lines; 2. the front of a group, vanguard <br><br>
-* 선불 (先拂) prepayment, advance payment <br><br>
-* 선배 (先輩) senior, more experienced person in a school, office, or career field <br><br>
-* 선열 (先烈) a patriotic martyr <br><br>
-* 선제 (先制) preemptive attack, first strike <br><br>
-* 선진국 (先進國) developed nation, advanced country <br><br>
-* 선착순 (先着順) order of arrival (first come, first served) <br><br>
-* 우선 (于先) (adv) to begin with, before everything, first of all <br><br>
-* 우선 (優先) (n) giving something priority or preference over others <br><br>
+
+⭐⭐⭐
+* 선생님 (先生님) <br><br>
+* 선배 (先輩) <br><br>
+* 우선 (于先) <br><br>
+
+⭐⭐
+* 선진국 (先進國) <br><br>
+* 우선 (優先) <br><br>
+
+⭐
+* 선불 (先拂) <br><br>
+* 선착순 (先着順) <br><br>
+
