--- a/_posts/8급/06/8000-06-05-十.md
+++ b/_posts/8급/06/8000-06-05-十.md
@@ -6,20 +6,24 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 열 십
+Korean name: 열 십 <br><br>
 
-Meaning: ten, tenth, the whole
+Meaning: ten, tenth, the whole <br><br>
 
 Examples:
-* 문일지십 (聞一知十) someone who hears one thing and understands ten things by inference, meaning an exceptionally intelligent person <br><br>
-* 수십 (數十) multiples of ten (similar to saying "dozens" in English) <br><br>
-* 십계명 (十誡命) the Ten Commandments <br><br>
-* 십대 (十代) the teens <br><br>
-* 십분 (十分) (adv) enough, fully <br><br>
-* 십시일반(十匙一飯) literally, ten spoonfuls make one bowl of rice, meaning that if multiple people combine their efforts, they can help one person easily <br><br>
-* 십자 (十字) the shape of a cross <br><br>
-* 십자가 (十字架) 1. cross on which Jesus died; 2. Christian cross <br><br>
-* 십자군 (十字軍) crusaders <br><br>
-* 십자수 (十字繡) cross-stitching <br><br>
-* 적십자 (赤十字) the Red Cross <br><br>
-* 십중팔구 (十中八九) literally, eight or nine out of ten, meaning a supermajority <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* 수십 (數十) <br><br>
+
+⭐
+* 십시일반(十匙一飯) <br><br>
+* 십자가 (十字架) <br><br>
+* 십중팔구 (十中八九) <br><br>
+
+(No stars)
+* 십년감수 (十年減壽) <br><br>
+* 십자 (十字) <br><br>
+
