--- a/_posts/8급/07/8000-07-05-二.md
+++ b/_posts/8급/07/8000-07-05-二.md
@@ -11,15 +11,18 @@ Korean name: 두 이
 Meaning: two, second, twice
 
 Examples:
-* 십이지장 (十二指腸) duodenum <br><br>
-* 이등병 (二等兵) the lowest rank in the military (for example, an army private) <br><br>
-* 이분법 (二分法) dichotomy <br><br>
-* 이산화 탄소 (二酸化炭素) carbon dioxide <br><br>
-* 이원 (二元) duality <br><br>
-* 이원론 (二元論) dualism <br><br>
-* 이중성 (二重性) duplicity <br><br>
-* 이중주차 (二重駐車) being double parked <br><br>
-* 이진법 (二進法) binary system <br><br>
-* 이차 (二次) the second, secondary; quadratic <br><br>
-*  이차방정식 (二次方程式) quadratic equation <br><br>
-*  제이차 세계대전 (第二次世界大戰) World War II <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* (none) <br><br>
+
+(No stars)
+* 이등병 (二等兵) <br><br>
+* 이산화 탄소 (二酸化炭素) <br><br>
+* 이차 (二次); see also 이차접종, 제이차 세계대전<br><br>
+
