--- a/_posts/8급/08/8000-08-01-人.md
+++ b/_posts/8급/08/8000-08-01-人.md
@@ -6,50 +6,56 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 사람 인
+Korean name: 사람 인 <br><br>
 
-Meaning: person, human
+Meaning: person, human <br><br>
 
 Examples:
-* 개인 (個人) individual, each person <br><br>
-* 군인 (軍人) a member of the military <br><br>
-* 기업인 (企業人) a person operating a business <br><br>
-* 노인 (老人) an old person <br><br>
-* 대변인 (代辯人) a spokesperson <br><br>
-* 대인 (大人) 1. an adult; 2. a polite, virtuous man <br><br>
-* 대인 (對人) being face-to-face <br><br>
-* 범인 (犯人) criminal, someone who has broken the law <br><br>
-* 본인 (本人) the person concerned, a person directly related to a matter <br><br>
-* 부인 (夫人) (polite form) another person's wife <br><br>
-* 살인 (殺人) murder <br><br>
-* 성인 (成人) an adult <br><br>
-* 성인 (聖人) a saint <br><br>
-* 시인 (詩人) a poet <br><br>
-* 신인 (新人) a newcomer, someone who is new to a field <br><br>
-* 애인 (愛人) a lover <br><br>
-* 언론인 (言論人) a journalist <br><br>
-* 연예인 (演藝人) an entertainer (actor, singer, dancer, etc.) <br><br>
-* 연인 (戀人) a couple, lovers <br><br>
-* 외국인 (外國人) a foreigner <br><br>
-* 인간 (人間) a human, person, mortal being; mankind <br><br>
-* 인공 (人工) being man-made, artificial <br><br>
-* 인구 (人口) human population <br><br>
-* 인권 (人權) human rights <br><br>
-* 인기 (人氣) popularity <br><br>
-* 인도 (人道) pavement, sidewalk <br><br>
-* 인사 (人事) 1. greetings; 2. human resources <br><br>
-* 인사 (人士) a distinguished person <br><br>
-* 인삼 (人蔘) ginseng <br><br>
-* 인생 (人生) a person's life <br><br>
-* 인정 (人情) human nature, humanity, compassion, empathy <br><br>
-* 인종 (人種) race <br><br>
-* 인체 (人體) a person's body <br><br>
-* 인형 (人形) a doll <br><br>
-* 일반인 (一般人) a layperson, ordinary person <br><br>
-* 장인 (匠人) craftsman, artisan <br><br>
-* 장인 (丈人) the father of one's wife <br><br>
-* 장애인 (障礙人) a disabled person <br><br>
-* 정치인 (政治人) a politician <br><br>
-* 주인 (主人) owner of something; landlord, landlady <br><br>
-* 주인공 (主人公) main character, protagonist, central figure <br><br>
-* 증인 (證人) a witness, person providing testimony <br><br>
+
+⭐⭐⭐
+* 군인 (軍人) <br><br>
+* 노인 (老人) <br><br>
+* 부인 (夫人) <br><br>
+* 애인 (愛人) <br><br>
+* 연예인 (演藝人) <br><br>
+* 외국인 (外國人) <br><br>
+* 인기 (人氣) <br><br>
+* 인사 (人事) <br><br>
+* 인삼 (人蔘) <br><br>
+* 인형 (人形) <br><br>
+* 주인 (主人) <br><br>
+
+⭐⭐
+* 개인 (個人) <br><br>
+* 범인 (犯人) <br><br>
+* 현대인 (現代人) <br><br>
+* 본인 (本人) <br><br>
+* 부인 (婦人) <br><br>
+* 살인 (殺人) <br><br>
+* 성인 (成人) <br><br>
+* 시인 (詩人) <br><br>
+* 연인 (戀人) <br><br>
+* 인간 (人間) <br><br>
+* 인공 (人工) <br><br>
+* 인구 (人口) <br><br>
+* 대인 (對人) <br><br>
+* 인도 (人道) <br><br>
+* 인생 (人生) <br><br>
+* 인정 (人情) <br><br>
+* 인체 (人體) <br><br>
+* 일반인 (一般人) <br><br>
+* 장인 (丈人) <br><br>
+* 장애인 (障礙人) <br><br>
+* 정치인 (政治人) <br><br>
+* 주인공 (主人公) <br><br>
+
+⭐
+* 성인 (聖人) <br><br>
+* 신인 (新人) <br><br>
+* 언론인 (言論人) <br><br>
+* 인권 (人權) <br><br>
+* 인사 (人士) <br><br>
+* 인종 (人種) <br><br>
+* 장본인 (張本人) <br><br>
+* 장인 (匠人) <br><br>
+* 초인종 (招人鐘) <br><br>
