--- a/_posts/8급/08/8000-08-05-弟.md
+++ b/_posts/8급/08/8000-08-05-弟.md
@@ -6,15 +6,19 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 아우 제
+Korean name: 아우 제 <br><br>
 
-Meaning: younger brother, younger person, student
+Meaning: younger brother, younger person, student <br><br>
 
 Examples:
-* 도제 (徒弟) student, apprentice <br><br>
-* 제자 (弟子) student, disciple <br><br>
-* 형제 (兄弟) 1. older and younger brothers; 2. children raised by the same parents <br><br>
-  의형제 (義兄弟) 1. blood brothers, men who have sworn an oath to each other; 2. half-brothers <br><br>
-  이복 형제 (異腹兄弟) brothers sharing the same father <br><br>
-  친형제 (親兄弟) a brother born to the same parents as oneself <br><br>
-* 형제자매 (兄弟姉妹) brothers and sisters <br><br>
+
+⭐⭐⭐
+* 형제 (兄弟); see also 친형제, 형제자매 <br><br>
+
+
+⭐⭐
+* 제자 (弟子) <br><br>
+
+
+⭐
+* (none) <br><br>
