--- a/_posts/8급/09/8000-09-01-中.md
+++ b/_posts/8급/09/8000-09-01-中.md
@@ -6,39 +6,46 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 가운데 중
+Korean name: 가운데 중 <br><br>
 
-Meaning: center, middle, in the midst of
+Meaning: center, middle, in the midst of <br><br>
 
 Examples:
-* 공중 (空中) air (that is, the space between the ground and the sky) <br><br>
-* 뇌졸중 (腦卒中) stroke, cerebrovascular accident <br><br>
-* 도중 (途中) 1. being on the way somewhere; 2. being in the middle of some task <br><br>
-* 수중 (水中) being submerged in water <br><br>
-* 시중 (市中) city center or market, where people trade goods and live their daily lives <br><br>
-* 열중 (熱中) absorption, concentration on one matter <br><br>
-* 중간 (中間) the middle <br><br>
-* 중간고사 (中間考査) midterm exam <br><br>
-* 중고 (中古) being secondhand, used <br><br>
-* 중년 (中年) middle age, middle years <br><br>
-* 중단 (中斷) stopping or quitting in the middle of something <br><br>
-* 중도 (中途) 1. being in progress; 2. being in the middle on the way somewhere <br><br>
-* 중독 (中毒) 1. being poisoned; 2. an addiction <br><br>
-  식중독 (食中毒) food poisoning <br><br>
-* 중립 (中立) neutrality <br><br>
-  탄소 중립 (炭素中立) carbon neutrality <br><br>
-* 중반 (中盤) middle stage or phase <br><br>
-* 중복 (中伏) the second of the three dog days of summer (the second dog day occurs 10 days after the first dog day) <br><br>
-* 중부 (中部) the middle part of a region <br><br>
-* 중산층 (中産層) middle class <br><br>
-* 중성 (中性) being neutral, in between two opposing sides <br><br>
-* 중세 (中世) the Middle Ages <br><br>
-* 중소기업 (中小企業) small- to medium-sized businesses <br><br>
-* 중순 (中旬) the middle ten days of a month <br><br>
-* 중식 (中食) Chinese food <br><br>
-* 중심 (中心) 1. the center of something; 2. an important, foundational part of something <br><br>
-* 중앙 (中央) 1. the middle of a place; 2. central, important place; 3. a nation's capital, seat of government <br><br>
-* 중이염 (中耳炎) middle-ear infection <br><br>
-* 중지 (中止) stopping or quitting in the middle of doing something <br><br>
-* 중학교 (中學校) middle school <br><br>
-* 집중 (集中) concentration, focus upon something <br><br>
+
+⭐⭐⭐
+* 중간 (中間) <br><br>
+* 중심 (中心) <br><br>
+* 중앙 (中央) <br><br>
+* 중학교 (中學校) <br><br>
+
+⭐⭐
+* 도중 (途中) <br><br>
+* 시중 (市中) <br><br>
+* 식중독 (食中毒) <br><br>
+* 열중 (熱中) <br><br>
+* 중고 (中古) <br><br>
+* 중고차 (中古車) <br><br>
+* 중단 (中斷) <br><br>
+* 중독 (中毒) <br><br>
+* 중반 (中盤) <br><br>
+* 중부 (中部) <br><br>
+* 중소기업 (中小企業) <br><br>
+* 중순 (中旬) <br><br>
+* 중식 (中食) <br><br>
+* 집중 (集中) <br><br>
+
+⭐
+* 공중 (空中) <br><br>
+* 뇌졸중 (腦卒中) <br><br>
+* 수중 (水中) <br><br>
+* 중년 (中年) <br><br>
+* 중도 (中途) <br><br>
+* 중립 (中立) <br><br>
+* 중산층 (中産層) <br><br>
+* 중성 (中性) <br><br>
+* 중세 (中世) <br><br>
+* 중지 (中止) <br><br>
+
+(No stars)
+* 탄소 중립 (炭素中立) <br><br>
+* 중복 (中伏) <br><br>
