--- a/_posts/8급/09/8000-09-02-靑.md
+++ b/_posts/8급/09/8000-09-02-靑.md
@@ -6,19 +6,24 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 푸를 청
+Korean name: 푸를 청 <br><br>
 
-Meaning: blue, young, quiet, calm
+Meaning: blue, young, quiet, calm <br><br>
 
 Examples:
-* 청과 (靑果) fresh fruits and vegetables <br><br>
-* 청년 (靑年) a young person, youth <br><br>
-* 청동 (靑銅) bronze <br><br>
-* 청동기 (靑銅器) bronzeware <br><br>
-* 청사진 (靑寫眞) blueprint <br><br>
-* 청산 (靑山) a green mountain thick with plants and trees <br><br>
-* 청색 (靑色) a blue color that is clear and bright like the sky or ocean <br><br>
-* 청소년 (靑少年) a younger person in their tweens/teens <br><br>
-* 청와대 (靑瓦臺) the Blue House (the Korean presidential residence) <br><br>
-* 청자 (靑瓷/靑磁) celadon <br><br>
-* 청춘 (靑春) young age, younger years <br><br>
+
+⭐⭐⭐
+* 청년 (靑年) <br><br>
+* 청소년 (靑少年) <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* 청색 (靑色) <br><br>
+* 청춘 (靑春) <br><br>
+
+(No stars)
+* 청동 (靑銅) <br><br>
+* 청와대 (靑瓦臺) <br><br>
+* 청자 (靑瓷/靑磁) <br><br>
