--- a/_posts/8급/09/8000-09-03-寸.md
+++ b/_posts/8급/09/8000-09-03-寸.md
@@ -6,13 +6,18 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 마디 촌
+Korean name: 마디 촌 <br><br>
 
-Meaning: a unit of measurement for length, small, few
+Meaning: a unit of measurement for length, small, few <br><br>
 
 Examples:
-* 촌수 (寸數) how many degrees of separation between family members <br><br>
-  삼촌 (三寸) uncle, paternal uncle <br><br>
-  사촌 (四寸) cousin <br><br>
-* 촌극 (寸劇) a very short play, performance <br><br>
 
+⭐⭐⭐
+* 삼촌 (三寸) <br><br>
+
+⭐⭐
+* 사촌 (四寸) <br><br>
+* 외삼촌 (外三寸) <br><br>
+
+⭐
+* (none)
