--- a/_posts/8급/09/8000-09-04-七.md
+++ b/_posts/8급/09/8000-09-04-七.md
@@ -6,9 +6,20 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 일곱 칠
+Korean name: 일곱 칠 <br><br>
 
-Meaning: seven
+Meaning: seven <br><br>
 
 Examples:
-* 북두칠성 (北斗七星) the Big Dipper, also known as the Great Bear <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* 칠전팔기 (七顚八起) <br><br>
+
+(No stars)
+* 칠면조 (七面鳥) <br><br>
