--- a/_posts/8급/09/8000-09-05-土.md
+++ b/_posts/8급/09/8000-09-05-土.md
@@ -6,15 +6,21 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 흙 토
+Korean name: 흙 토 <br><br>
 
-Meaning: soil, earth, territory
+Meaning: soil, earth, territory <br><br>
 
 Examples:
-* 국토 (國土) a nation's territory <br><br>
-* 영토 (領土) territory, domain <br><br>
-* 토대 (土臺) 1. the foundation of a building; 2. (figurative) the basis or foundation of a task or thing <br><br>
-* 토성 (土星) Saturn <br><br>
-* 토양 (土壤) 1. soil, earth; 2. (figurative) the basis or foundation of a task or activity <br><br>
-* 토요일 (土曜日) Saturday <br><br>
-* 토지 (土地) land, lot, plot, ground <br><br>
+
+⭐⭐⭐
+* 토요일 (土曜日) <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* 국토 (國土) <br><br>
+* 영토 (領土) <br><br>
+* 토대 (土臺) <br><br>
+* 토양 (土壤) <br><br>
+* 토지 (土地) <br><br>
