--- a/_posts/8급/10/8000-10-01-八.md
+++ b/_posts/8급/10/8000-10-01-八.md
@@ -6,16 +6,24 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 여덟 팔
+Korean name: 여덟 팔 <br><br>
 
-Meaning: eight, eighth
+Meaning: eight, eighth <br><br>
 
 Examples:
-* 백팔 번뇌 (百八煩惱) in Buddhism, the 108 sufferings of the mind <br><br>
-* 사방팔방 (四方八方) all directions and all sides <br><br>
-* 사주팔자 (四柱八字) fate, destiny (literally, fate determined by the eight letters that make up a person's year, month, date, and time of birth); can be shortened to 팔자 <br><br>
-  상팔자 (上八字) very good fortune <br><br>
-* 삼팔선 (三八線) the 38th parallel <br><br>
-* 초파일 (初八日) the Buddha's birthday (the eighth day of the fourth lunar month) <br><br>
-* 팔각형 (八角形) octagon <br><br>
-* 팔도 (八道) the eight provinces of Korea during the Joseon dynasty <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* 팔방미인 (八方美人) <br><br>
+* 팔자 (八字) <br><br>
+
+(No stars)
+* 사방팔방 (四方八方) <br><br>
+* 사주팔자 (四柱八字) <br><br>
+* 삼팔선 (三八線) <br><br>
+* 팔도 (八道) <br><br>
