--- a/_posts/8급/10/8000-10-05-火.md
+++ b/_posts/8급/10/8000-10-05-火.md
@@ -6,23 +6,21 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 불 화
+Korean name: 불 화 <br><br>
 
-Meaning: fire, flame, anger
+Meaning: fire, flame, anger <br><br>
 
 Examples:
-* 분화구 (噴火口) crater that forms when a volcano erupts <br><br>
-* 소화기 (消火器) fire extinguisher <br><br>
-* 소화전 (消火栓) fire hydrant <br><br>
-* 성화 (成火) 1. irritation or impatience when things do not go one's way; 2. pestering, nagging <br><br>
-* 화산 (火山) volcano <br><br>
-  활화산 (活火山) active volcano <br><br>
-  휴화산 (休火山) dormant volcano <br><br>
-* 화산암 (火山巖) volcanic rock <br><br>
-* 화상 (火傷) the wound left behind after burning or scalding the skin <br><br>
-* 화성 (火星) Mars <br><br>
-* 화약 (火藥) gunpowder or other substance that explodes upon contact with heat, electricity, etc. <br><br>
-* 화염병 (火焰甁) Molotov cocktail, petrol bomb <br><br>
-* 화요일 (火曜日) Tuesday <br><br>
-* 화장 (火葬) cremation <br><br>
-* 화재 (火災) a fire disaster<br><br>
+
+⭐⭐⭐
+* 화요일 (火曜日) <br><br>
+
+⭐⭐
+* 화재 (火災) <br><br>
+
+⭐
+* 소화기 (消火器) <br><br>
+* 성화 (成火) <br><br>
+* 화산 (火山) <br><br>
+* 화상 (火傷) <br><br>
+* 화장 (火葬) <br><br>
