--- a/_posts/8급/03/8000-03-01-東.md
+++ b/_posts/8급/03/8000-03-01-東.md
@@ -6,14 +6,21 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 동녘 동
+Korean name: 동녘 동 <br><br>
 
-Meaning: east, eastward
+Meaning: east, eastward <br><br>
 
 Examples:
-* 극동 (極東) 1. the easternmost part; 2. the Far East <br><br>
-* 동남아 (東南亞) Southeast Asia <br><br>
-* 동양 (東洋) the Orient, Asia <br><br>
-* 동풍 (東風) 1. a wind blowing from the east; 2. a wind that blows in during the spring<br><br>
-* 동해안 (東海岸) the east coast <br><br>
-* 중동 (中東) the Middle East <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* 동양 (東洋) <br><br>
+
+⭐
+* 동남아 (東南亞) <br><br>
+
+(No stars)
+* 동해안 (東海岸) <br><br>
+* 중동 (中東) <br><br>
