--- a/_posts/8급/05/8000-05-01-四.md
+++ b/_posts/8급/05/8000-05-01-四.md
@@ -6,14 +6,21 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 넉 사
+Korean name: 넉 사 <br><br>
 
-Meaning: four, fourth
+Meaning: four, fourth <br><br>
 
 Examples:
-*  고종사촌 (姑從四寸) cousin from the father's side of the family <br><br>
-* 사각 (四角) quadrangle <br><br>
-* 사계절 (四季節) four seasons <br><br>
-* 사방(四方) 1. four directions (N, S, E, W); 2. all directions, everywhere <br><br>
-* 외종사촌 (外從四寸) cousin from the mother's side of the family <br><br>
-* 사촌 (四寸) cousin <br><br>
+
+⭐⭐⭐
+* 사계절 (四季節) <br><br>
+
+
+⭐⭐
+* 사방 (四方) <br><br>
+* 사촌 (四寸) <br><br>
+
+
+⭐
+* 사각형 (四角形) <br><br>
+
