--- a/_posts/8급/05/8000-05-02-山.md
+++ b/_posts/8급/05/8000-05-02-山.md
@@ -6,15 +6,22 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 메 산
+Korean name: 메 산 <br><br>
 
-Meaning: mountain
+Meaning: mountain <br><br>
 
 Examples:
-* 강산 (江山) 1. nature, usually meaning scenery that includes rivers and mountains; 2. a country's territory <br><br>
-* 등산 (登山) hiking <br><br>
-* 산림 (山林) mountains and forests <br><br>
-* 산맥 (山脈) mountain range <br><br>
-* 산수 (山水) scenery that includes mountains and waters <br><br>
-* 산적 (山賊) bandit; a thief who operates in the mountains <br><br>
-* 화산 (火山) volcano <br><br>
+
+⭐⭐⭐
+* 등산 (登山) <br><br>
+
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* 강산 (江山) <br><br>
+* 산림 (山林) <br><br>
+* 산맥 (山脈) <br><br>
+* 화산 (火山) <br><br>
+
