--- a/_posts/8급/06/8000-06-02-小.md
+++ b/_posts/8급/06/8000-06-02-小.md
@@ -6,20 +6,28 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 작을 소
+Korean name: 작을 소 <br><br>
 
-Meaning: small, few
+Meaning: small, few <br><br>
 
 Examples:
-* 소변 (小便) urine <br><br>
-* 소설 (小說) novel <br><br>
-* 소수 (小數) a decimal number <br><br>
-* 소식 (小食) eating a small amount of food <br><br>
-* 소심하다 (小心하다) timid, being overly cautious due to lack of courage<br><br>
-* 소아 (小兒) a young child <br><br>
-* 소인 (小人) 1. a child; 2. a person whose height and build are very small; 3. (figurative) a narrow-minded, selfish person <br><br>
-* 소장 (小腸) small intestine <br><br>
-* 소형 (小型) being relatively small in size or scale <br><br>
-* 최소 (最小) the minimum, the least <br><br>
-* 축소 (縮小) reduction in quantity, size, or scale <br><br>
-* 협소하다 (狹小하다) 1. being small and narrow in space; 2. being small-minded or short-sighted <br><br>
+
+⭐⭐⭐
+* 소설 (小說) <br><br>
+
+
+⭐⭐
+* 소변 (小便) <br><br>
+* 소아과 (小兒科) <br><br>
+* 최소 (最小) <br><br>
+* 소형 (小型) <br><br>
+* 축소 (縮小) <br><br>
+
+
+⭐
+* 소식 (小食) <br><br>
+* 소심하다 (小心하다) <br><br>
+* 소아 (小兒) <br><br>
+* 소인 (小人) <br><br>
+* 소장 (小腸) <br><br>
+
