--- a/_posts/8급/06/8000-06-03-水.md
+++ b/_posts/8급/06/8000-06-03-水.md
@@ -6,22 +6,30 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 물 수
+Korean name: 물 수 <br><br>
 
-Meaning: water, liquid
+Meaning: water, liquid <br><br>
 
 Examples:
-* 담수 (淡水) freshwater, such as that in a river or lake <br><br>
-* 분수 (噴水) water fountain, typically displayed in a park or public square <br><br>
-* 수도 (水道) water treatment facility, water reclamation facility <br><br>
-* 수력 (水力) hydroelectric power <br><br>
-* 수소 (水素) hydrogen <br><br>
-* 수영 (水泳) swimming <br><br>
-* 수위 (水位) water level of a river, sea, lake, etc. <br><br>
-* 수평 (水平) 1. being flat; 2. being horizontal <br><br>
-* 약수 (藥水) water that has medicinal or healing powers <br><br>
-* 온수 (溫水) hot water <br><br>
-* 저수지 (貯水池) reservoir <br><br>
-* 정수 (淨水) water purification; purified water <br><br>
-* 호수 (湖水) a lake <br><br>
-* 홍수 (洪水) flood, floodwaters <br><br>
+
+⭐⭐⭐
+* 수영 (水泳) <br><br>
+* 호수 (湖水) <br><br>
+
+
+⭐⭐
+* 분수 (噴水) <br><br>
+* 수도 (水道) <br><br>
+* 홍수 (洪水) <br><br>
+
+
+⭐
+* 수평 (水平) <br><br>
+* 온수 (溫水) <br><br>
+
+
+(No stars)
+* 수력 (水力) <br><br>
+* 수소 (水素) <br><br>
+* 저수지 (貯水池) <br><br>
+
