--- a/_posts/8급/07/8000-07-01-五.md
+++ b/_posts/8급/07/8000-07-01-五.md
@@ -6,15 +6,21 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 다섯 오
+Korean name: 다섯 오 <br><br>
 
-Meaning: five, fifth
+Meaning: five, fifth <br><br>
 
 Examples:
-* 오각형 (五角形) pentagon <br><br>
-* 오감 (五感) the five senses <br><br>
-* 오계 (五戒) the five Buddhist commandments <br><br>
-* 오대양 (五大洋) the world's five oceans <br><br>
-* 오륜 (五輪) the Olympic rings <br><br>
-* 오목 (五目) being concave <br><br>
-* 오행 (五行) the five elements (metal, wood, water, fire, earth) <br><br>
+
+⭐⭐⭐
+* (none) <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* (none) <br><br>
+
+(No stars)
+* 오각형 (五角形) <br><br>
+* 오감 (五感) <br><br>
