--- a/_posts/8급/07/8000-07-03-外.md
+++ b/_posts/8급/07/8000-07-03-外.md
@@ -6,33 +6,38 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 바깥 외
+Korean name: 바깥 외 <br><br>
 
-Meaning: outside, outer surface, other person
+Meaning: outside, outer surface, other person <br><br>
 
 Examples:
-* 과외 (課外) 1. extra work performed outside of work hours or beyond a curriculum; 2. extra lessons outside of school <br><br>
-* 교외 (校外) off-campus <br><br>
-* 교외 (郊外) surburbs <br><br>
-* 대외관계 (對外關係) foreign relations; diplomacy <br><br>
-* 성형외과 (成形外科) plastic surgery; plastic surgery department <br><br>
-* 소외 (疏外) being alienated or excluded from a group <br><br>
-* 야외 (野外) outdoors, outside <br><br>
-* 외계 (外界) 1. the world surrounding oneself; 2. the world outside of the Earth <br><br>
-* 외계인 (外界人) alien, being from outer space <br><br>
-* 외과 (外科) surgery; department of surgery <br><br>
-* 외교 (外交) diplomacy <br><br>
-* 외교관 (外交官) diplomat <br><br>
-* 외교통상부 (外交通商部) Ministry of Foreign Affairs and Trade <br><br>
-* 외국 (外國) foreign country <br><br>
-* 외래어 (外來語) loan word <br><br>
-* 외면 (外面) 1. outer surface, appearance; 2. the act of looking away or turning away from someone or something <br><br>
-* 외모 (外貌) a person's outer appearance <br><br>
-* 외삼촌 (外三寸) one's maternal uncle <br><br>
-* 외상 (外相) foreign minister <br><br>
-* 외숙모 (外叔母) the wife of one's maternal uncle <br><br>
-* 외식 (外食) dining out, eating outside the home <br><br>
-* 외출 (外出) being away from one's home or office to carry out a tasks <br><br>
-* 의외 (意外) being unexpected or something one had not predicted or thought of <br><br>
-* 정형외과 (整形外科) orthopedics; department of orthopedics <br><br>
-* 해외 (海外) being overseas <br><br>
+
+⭐⭐⭐
+* 외국 (外國) <br><br>
+* 외국어 (外國語) <br><br>
+* 외국인 (外國人) <br><br>
+* 외출 (外出) <br><br>
+* 해외 (海外) <br><br>
+
+⭐⭐
+* 과외 (課外) <br><br>
+* 교외 (郊外) <br><br>
+* 야외 (野外) <br><br>
+* 외과 (外科) <br><br>
+* 외교 (外交) <br><br>
+* 외교관 (外交官) <br><br>
+* 외면 (外面) <br><br>
+* 외모 (外貌) <br><br>
+* 외삼촌 (外三寸) <br><br>
+* 외숙모 (外叔母) <br><br>
+* 외식 (外食) <br><br>
+* 의외 (意外) <br><br>
+
+⭐
+* 성형외과 (成形外科) <br><br>
+* 소외 (疏外) <br><br>
+* 외래어 (外來語) <br><br>
+* 정형외과 (整形外科) <br><br>
+
+(No stars)
+* 외계인 (外界人) <br><br>
