--- a/_posts/8급/08/8000-08-04-長.md
+++ b/_posts/8급/08/8000-08-04-長.md
@@ -6,31 +6,35 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 긴 장
+Korean name: 긴 장 <br><br>
 
-Meaning: long; to grow, develop; adult
+Meaning: long; to grow, develop; adult <br><br>
 
 Examples:
-* 가장 (家長) head of a household <br><br>
-* 과장 (課長) chief of a department in a government office, company, etc. <br><br>
-* 교장 (校長) school principal <br><br>
-* 대장 (大長) large intestine <br><br>
-* 대장 (隊長) leader, chief, commander <br><br>
-* 반장 (班長) 1. head of a group; 2. class president, school president <br><br>
-* 부장 (部長) department chief <br><br>
-* 사장 (社長) president or chief executive of a company <br><br>
-* 성장 (成長) growth or development of a person, animal, or thing <br><br>
-* 시장 (市長) mayor, highest executive that governs a city <br><br>
-* 실장 (室長) chief of an office in the government, organization, or company, whose name ends in "실" <br><br>
-* 연장 (延長) extension in time, length, distance, etc.; continuation <br><br>
-* 원장 (院長) chief of a hospital or other institution whose name ends in "원" <br><br>
-* 장관 (長官) minister, as in the head of a government agency responsible for national affairs <br><br>
-* 장기 (長期) a long period of time <br><br>
-* 장남 (長男) eldest son <br><br>
-* 장녀 (長女) eldest daughter <br><br>
-* 장단 (長短) 1. being long or short; 2. strengths and weaknesses, pros and cons <br><br>
-* 장수 (長壽) long life, longevity <br><br>
-* 장점 (長點) a good aspect of something, its strengths, or its merits <br><br>
-* 총장 (總長) secretary general, chief of staff <br><br>
-* 파장 (波長) 1. wavelength (radio or sound waves); 2. impact or influence of a shocking incident <br><br>
-* 회장 (會長) 1. person presiding over a meeting; 2. president, chairman, or chief executive of a company <br><br>
+
+⭐⭐⭐
+* 부장 (部長) <br><br>
+* 사장 (社長) <br><br>
+
+⭐⭐
+* 가장 (家長) <br><br>
+* 과장 (課長) <br><br>
+* 교장 (校長) <br><br>
+* 반장 (班長) <br><br>
+* 성장 (成長) <br><br>
+* 시장 (市長) <br><br>
+* 실장 (室長) <br><br>
+* 연장 (延長) <br><br>
+* 장남 (長男) <br><br>
+* 장단점 (長短點) <br><br>
+* 장수 (長壽) <br><br>
+* 장점 (長點) <br><br>
+* 회장 (會長) <br><br>
+
+⭐
+* 대장 (隊長) <br><br>
+* 원장 (院長) <br><br>
+* 장관 (長官) <br><br>
+* 장기 (長期) <br><br>
+* 총장 (總長) <br><br>
+* 파장 (波長) <br><br>
