--- a/_posts/8급/10/8000-10-02-學.md
+++ b/_posts/8급/10/8000-10-02-學.md
@@ -6,52 +6,52 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 배울 학
+Korean name: 배울 학 <br><br>
 
-Meaning: learning, study, knowledge, school
+Meaning: learning, study, knowledge, school <br><br>
 
 Examples:
-* 건축학 (建築學) architecture <br><br>
-* 개학 (開學) the start of a new school term <br><br>
-* 견학 (見學) field trip, visiting a place to learn something <br><br>
-* 공학 (工學) engineering <br><br>
-* 과학 (科學) science <br><br>
-* 물리학 (物理學) physics <br><br>
-* 생물학 (生物學) biology <br><br>
-* 신경과학 (神經科學) neuroscience <br><br>
-* 화학 (化學) chemistry <br><br>
-* 지구과학 (地球科學) earth science <br><br>
-* 방학 (放學) school vacation period <br><br>
-* 수학 (數學) mathematics <br><br>
-* 수학 (受學) the act of studying a certain field <br><br>
-* 기하학 (幾何學) geometry <br><br>
-* 대학수학능력시험 (大學修學能力試驗) Korea's College Scholastic Ability Test (수능) <br><br>
-* 역학 (力學) mechanics <br><br>
-* 유학 (留學/遊學) studying abroad <br><br>
-* 유학 (儒學) Confucianism <br><br>
-* 의학 (醫學) the study of medicine <br><br>
-* 입학 (入學) entrance or admission to a school <br><br>
-* 장학금 (奬學金) scholarship money <br><br>
-* 재학생 (在學生) an enrolled student <br><br>
-* 전학생 (轉學生) a transfer student <br><br>
-* 진학 (進學) entrance into a higher level of education after graduating from school <br><br>
-* 철학 (哲學) philosophy <br><br>
-* 통학 (通學) the act of going to and from school <br><br>
-* 학교 (學校) school <br><br>
-* 학기 (學期) academic term <br><br>
-* 학년 (學年) school year, grade level <br><br>
-* 학력 (學力) one's academic abilities <br><br>
-* 학력 (學歷) one's academic background <br><br>
-* 학문 (學問) the act of studying a certain field <br><br>
-* 학벌 (學閥) social status resulting from one's education background <br><br>
-* 학부모 (學父母) the parents of children in school <br><br>
-* 학비 (學費) school tuition, school expenses <br><br>
-* 학생 (學生) student <br><br>
-* 학술 (學術) arts and sciences <br><br>
-* 학습 (學習) the act of studying and learning something <br><br>
-* 학업 (學業) the act of studying to gain knowledge, usually in school <br><br>
-* 학원 (學院) a small private academy, often a cram school <br><br>
-* 대학원 (大學院) graduate school <br><br>
-* 학위 (學位) academic degree <br><br>
-* 학자 (學者) a distinguished scholar, an academic researcher <br><br>
-* 휴학 (休學) leave of absence from school <br><br>
+
+⭐⭐⭐
+* 방학 (放學) <br><br>
+* 유학 (留學) <br><br>
+* 입학 (入學) <br><br>
+* 학교 (學校) <br><br>
+* 학기 (學期) <br><br>
+* 학년 (學年) <br><br>
+* 학생 (學生) <br><br>
+* 학생증 (學生證) <br><br>
+* 학원 (學院) <br><br>
+* 대학원 (大學院) <br><br>
+
+⭐⭐
+* 견학 (見學) <br><br>
+* 과학 (科學) <br><br>
+* 수학 (數學) <br><br>
+* 장학금 (奬學金) <br><br>
+* 진학 (進學) <br><br>
+* 학력 (學歷) <br><br>
+* 학문 (學問) <br><br>
+* 학부모 (學父母) <br><br>
+* 학비 (學費) <br><br>
+* 학습 (學習) <br><br>
+* 학자 (學者) <br><br>
+* 휴학 (休學) <br><br>
+
+⭐
+* 공학 (工學) <br><br>
+* 화학 (化學) <br><br>
+* 수학 (受學) <br><br>
+* 유학 (儒學) <br><br>
+* 의학 (醫學) <br><br>
+* 재학생 (在學生) <br><br>
+* 철학 (哲學) <br><br>
+* 통학 (通學) <br><br>
+* 학술 (學術) <br><br>
+* 학업 (學業) <br><br>
+* 학위 (學位) <br><br>
+
+(No stars)
+* 물리학 (物理學) <br><br>
+* 생물학 (生物學) <br><br>
+* 대학수학능력시험 (大學修學能力試驗), (also known as 수능) <br><br>
