--- a/_posts/8급/10/8000-10-03-韓.md
+++ b/_posts/8급/10/8000-10-03-韓.md
@@ -6,20 +6,25 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 한국/나라 한
+Korean name: 한국/나라 한 <br><br>
 
-Meaning: Korea
+Meaning: Korea <br><br>
 
 Examples:
-* 남한 (南韓) South Korea <br><br>
-* 대한민국 (大韓民國) the Republic of Korea <br><br>
-* 북한 (北韓) North Korea <br><br>
-* 한국 (韓國) Korea <br><br>
-* 한반도 (韓半島) the Korean peninsula (North and South Korea) <br><br>
-* 한방 (韓方) ancient Korean medicine <br><br>
-* 한복 (韓服) traditional Korean attire <br><br>
-* 한약 (韓藥) traditional Korean medicine <br><br>
-* 한옥 (韓屋) traditional style Korean house <br><br>
-* 한우 (韓牛) Korean cattle <br><br>
-* 한의원 (韓醫院) a clinic that practices traditional Korean medicine <br><br>
-* 한지 (韓紙) traditional Korean paper made from tree bark <br><br>
+
+⭐⭐⭐
+* 한국 (韓國) <br><br>
+* 한복 (韓服) <br><br>
+* 한옥 (韓屋) <br><br>
+
+⭐⭐
+* 대한민국 (大韓民國) <br><br>
+
+⭐
+* 남한 (南韓) <br><br>
+* 북한 (北韓) <br><br>
+* 한반도 (韓半島) <br><br>
+* 한방 (韓方) <br><br>
+* 한약 (韓藥) <br><br>
+* 한우 (韓牛) <br><br>
+* 한의원 (韓醫院) <br><br>
