--- a/_posts/8급/10/8000-10-04-兄.md
+++ b/_posts/8급/10/8000-10-04-兄.md
@@ -6,16 +6,17 @@ categories: 8급
 permalink: "/:categories/:title.html"
 ---
 
-Korean name: 형 형
+Korean name: 형 형 <br><br>
 
-Meaning: elder brother
+Meaning: elder brother <br><br>
 
 Examples:
-* 매형 (妹兄) a word a man uses to refer to his older sister's husband <br><br>
-* 처형 (妻兄) a word a man uses to refer to his wife's older sister <br><br>
-* 형부 (兄夫) a word a woman uses to refer to her sister's husband <br><br>
-* 형제 (兄弟) 1. older and younger brothers; 2. children raised by the same parents <br><br>
-  의형제 (義兄弟) 1. blood brothers, men who have sworn an oath to each other; 2. half-brothers <br><br>
-  이복 형제 (異腹兄弟) brothers sharing the same father <br><br>
-  친형제 (親兄弟) a brother born to the same parents as oneself <br><br>
-* 형제자매 (兄弟姉妹) brothers and sisters <br><br>
+
+⭐⭐⭐
+* 형제 (兄弟); see also 형제자매 <br><br>
+
+⭐⭐
+* (none) <br><br>
+
+⭐
+* 형부 (兄夫) <br><br>
