complete 15/50  characters in 준7급

--- a/_posts/8급/01/8000-01-01-校.md
+++ b/_posts/8급/01/8000-01-01-校.md
@@ -13,7 +13,7 @@ Meaning: school, military officer, military post <br><br>
 Examples:
 
 ⭐⭐⭐
-* 학교 (學校); see also 초등학교, 중학교, 고등학교, 사립학교, 대학교) <br><br>
+* 학교 (學校); see also 초등학교, 중학교, 고등학교, 사립학교, 대학교 <br><br>
 
 
 ⭐⭐
