--- a/_posts/준7급/7500-01-01-toc.md
+++ b/_posts/준7급/7500-01-01-toc.md
@@ -35,9 +35,9 @@ permalink: "/:categories/toc"
   <tr>
     <td class="tg-li6d"><a href="農.html">農 <br>농사 농</a></td>
     <td class="tg-li6d"><a href="答.html">答 <br>대답 답</a></td>
-    <td class="tg-li6d">道 <br>길 도</td>
-    <td class="tg-li6d">動 <br>움직일 동</td>
-    <td class="tg-li6d">力 <br>힘 력</td>
+    <td class="tg-li6d"><a href="道.html">道 <br>길 도</a></td>
+    <td class="tg-li6d"><a href="動.html">動 <br>움직일 동</a></td>
+    <td class="tg-li6d"><a href="力.html">力 <br>힘 력</a></td>
   </tr>
   <tr>
     <td class="tg-li6d">立 <br>설 립</td>
