--- a/_posts/준7급/7500-12-31-template.md
+++ b/_posts/준7급/7500-12-31-template.md
@@ -19,9 +19,29 @@ Examples:
 *  <br><br>
 *  <br><br>
 *  <br><br>
+
+⭐⭐
 *  <br><br>
 *  <br><br>
 *  <br><br>
+*  <br><br>
+*  <br><br>
+*  <br><br>
+*  <br><br>
+*  <br><br>
+
+⭐
+*  <br><br>
+*  <br><br>
+*  <br><br>
+*  <br><br>
+*  <br><br>
+*  <br><br>
+*  <br><br>
+*  <br><br>
+*  <br><br>
+
+(No stars)
 *  <br><br>
 *  <br><br>
 *  <br><br>
