Complete 20/50 characters in 준7급 (2nd attempt)

--- a/_posts/준7급/7500-01-01-toc.md
+++ b/_posts/준7급/7500-01-01-toc.md
@@ -40,11 +40,11 @@ permalink: "/:categories/toc"
     <td class="tg-li6d"><a href="力.html">力 <br>힘 력</a></td>
   </tr>
   <tr>
-    <td class="tg-li6d">立 <br>설 립</td>
-    <td class="tg-li6d">每 <br>매양 매</td>
-    <td class="tg-li6d">名 <br>이름 명</td>
-    <td class="tg-li6d">物 <br>물건 물</td>
-    <td class="tg-li6d">方 <br>모 방</td>
+    <td class="tg-li6d"><a href="立.html">立 <br>설 립</a></td>
+    <td class="tg-li6d"><a href="每.html">每 <br>매양 매</a></td>
+    <td class="tg-li6d"><a href="名.html">名 <br>이름 명</a></td>
+    <td class="tg-li6d"><a href="物.html">物 <br>물건 물</a></td>
+    <td class="tg-li6d"><a href="方.html">方 <br>모 방</a></td>
   </tr>
   <tr>
     <td class="tg-li6d">不 <br>아닐 불</td>
