Complete 25/50 characters in 준7급

--- a/_posts/준7급/7500-01-01-toc.md
+++ b/_posts/준7급/7500-01-01-toc.md
@@ -47,11 +47,11 @@ permalink: "/:categories/toc"
     <td class="tg-li6d"><a href="方.html">方 <br>모 방</a></td>
   </tr>
   <tr>
-    <td class="tg-li6d">不 <br>아닐 불</td>
-    <td class="tg-li6d">事 <br>일 사</td>
-    <td class="tg-li6d">上 <br>윗 상</td>
-    <td class="tg-li6d">姓 <br>성 성</td>
-    <td class="tg-li6d">世 <br>인간 세</td>
+    <td class="tg-li6d"><a href="不.html">不 <br>아닐 불</a></td>
+    <td class="tg-li6d"><a href="事.html">事 <br>일 사</a></td>
+    <td class="tg-li6d"><a href="上.html">上 <br>윗 상</a></td>
+    <td class="tg-li6d"><a href="姓.html">姓 <br>성 성</a></td>
+    <td class="tg-li6d"><a href="世.html">世 <br>인간 세</a></td>
   </tr>
   <tr>
     <td class="tg-li6d">手 <br>손 수</td>
